# giji

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  bug_postgres.py  bulk_import.py  demand_postgres.py  pyproject.toml  requirements.txt  setup.py  templates_distribution.py  tox.ini
.github/workflows/: docker-build-push-on-tag-or-release.yaml  docker-build.yaml  linters.yaml
config/: __init__.py  bug-report.yml  connections.py  constants.py
scripts/: bug_postgres.py  bulk_import.py  create_labels.py  demand_postgres.py  templates_distribution.py
src/giji/: __init__.py  bulk_import.py  config.py  demand_postgres.py  templates_distribution.py
src/giji.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_bug_postgres.py  test_bulk_import.py  test_config.py  test_connections.py  test_demand_postgres.py  test_main.py
